[package]
name = "rtor"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version="0.14.1", features=["toml"]}
clap = { version="4.5.21", features=["derive"]}
serde = { version="1.0.215", features=["derive"]}
tokio = { version="1.41.1", features=["full"]}
uuid = { version="1.11.0", features = ["v4", "fast-rng"]}

[dev-dependencies]
assert2 = "0.3.15"
googletest = "0.12.0"
rstest = "0.23"
